# opora

./: .gitignore  .gitmodules  README.md  pyproject.toml
docs/: architect_en.md  architect_ru.md
emb-srv/configs/: model_config.yaml  server_config.yaml
emb-srv/src/: main.py
emb-srv/systemd/: embedding-server.service
main-srv/: requirements.txt
main-srv/configs/: docker-compose.yaml  emb_srv_config.yaml  model_routing.yaml  pg_hba.conf  postgres_db_config.yaml  postgresql.conf  qdrant_config.yaml  qdrant_db_config.yaml
main-srv/scripts/: create_qdrant_collection.py  diagram_of_grap.sql  diagram_of_graph_with_domens.sql  start-db.sh  start_llama-server.sh
main-srv/src/: main.py  version.py
main-srv/src/db_manager/: db_manager.py  qdrant_manager.py  qdrant_schema.py
main-srv/src/dialog_services/: __init__.py  dialogue_manager.py
main-srv/src/interfaces/: console_interface.py
main-srv/src/memory_service/: __init__.py  entity_binding_composer.py  entity_clustering_composer.py  form_composer.py  graph_linker_composer.py  graph_merge_composer.py  graph_node_sync.py  graph_route_composer.py  graph_summarize_composer.py  hypothesis_service.py  memory_composer.py  topic_composer.py  verification_composer.py  verification_service.py
main-srv/src/model_service/: model_service.py
main-srv/src/orchestrator/: orchestrator.py  orchestrator_entry.py  response_composer.py
main-srv/src/preprocessing/: _init__.py  decomposition_composer.py  pipeline.py  retrieval_composer.py  routing_composer.py
main-srv/src/services/: datetime_context.py  emb_service.py  (+3 more)
(+10 files in other folders)
